[package]
name = "open-enlink-protocal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "ring",
] }
