[package]
name = "open-enlink-protocal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "ring",
] }
packet = { version = "*", optional = true }

[target.'cfg(windows)'.dependencies]
wintun = { version = "0.5.0", optional = true }


[features]
default = ["full"]
packet = ["dep:packet"]
server = []
server-tun = ["server", "dep:wintun"]
full = ["packet", "server", "server-tun"]
